@@ -147,6 +147,9 @@ Set the current window to be above all normal windows (returns TRUE).
 \fBbelow\fR
 Set the current window to be below all normal windows (returns TRUE).
 .TP
+\fBdecorate\fR
+Add the window manager decorations to the current window (returns boolean).
+.TP
 \fBundecorate\fR
 Remove the window manager decorations from the current window (returns boolean).
 .TP
